# mirea-microservices-exam-blog-task

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml  docker-publish.yml
crates/exam-task/: .env  Cargo.toml
crates/exam-task-data/: Cargo.toml
crates/exam-task-data/src/: lib.rs
crates/exam-task-data/src/data_source/: client.rs  mod.rs
crates/exam-task-data/src/data_source/task/: mod.rs  model.rs
crates/exam-task-data/src/repository/: id.rs  mod.rs  task.rs
crates/exam-task-domain/: Cargo.toml
crates/exam-task-domain/src/: lib.rs
crates/exam-task-domain/src/model/: id.rs  mod.rs  task.rs
crates/exam-task-domain/src/repository/: id.rs  mod.rs  task.rs
crates/exam-task-domain/src/use_case/: mod.rs
crates/exam-task-domain/src/use_case/task/: create.rs  delete.rs  filter.rs  mod.rs  read.rs  update.rs
crates/exam-task/src/: lib.rs  main.rs
crates/exam-task/src/di/: mod.rs
crates/exam-task/src/di/data_source/: client.rs  mod.rs  task.rs
crates/exam-task/src/di/repository/: id.rs  mod.rs  task.rs
crates/exam-task/src/di/schedule/: mod.rs
crates/exam-task/src/di/use_case/: mod.rs
crates/exam-task/src/di/use_case/task/: create.rs  delete.rs  filter.rs  mod.rs  read.rs  update.rs
crates/exam-task/src/model/: mod.rs  post.rs  task.rs  utils.rs
crates/exam-task/src/route/: error.rs  health.rs  mod.rs  task.rs
crates/exam-task/src/schedule/: mod.rs
crates/exam-task/tests/: health.rs  task.rs
