[package]
name = "exam-task"
version = "0.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
exam-task-data = { path = "../exam-task-data" }
exam-task-domain = { path = "../exam-task-domain" }
axum = "0.5.17"
tower-http = { version = "0.3.5", features = ["trace"] }
tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shaku = "0.6.1"
shaku_axum = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.68"
derive_more = "0.99.17"
typed-builder = "0.11.0"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
